# polyglot-mcp

./: .gitignore  LICENSE  README.md  __init__.py  client.py  mcp.json  models.py  pyproject.toml  requirements.txt  server.py  server_simple.py  server_sse.py  setup_test_mcp.py  setup_test_mcp.sh  start_mcp_server.py  start_mcp_server.sh  test_mcp.py
examples/: translate.py
polyglot/: __init__.py  client.py  models.py  server.py  server_fixed.py
