[project]
name = "polyglot-mcp"
version = "1.0.0"
description = "A Model Contexts Protocol implementation for translation services"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "anthropic>=0.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0"
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0"
] 